# learncoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  configure.ac  liblearncoinconsensus.pc.in
.github/: ISSUE_TEMPLATE.md
.tx/: config
contrib/: README.md  gitian-build.py  install_db4.sh  learncoin-cli.bash-completion  learncoin-qt.pro  learncoin-tx.bash-completion  learncoind.bash-completion  valgrind.supp
depends/: Makefile  README.md  description.md
doc/: Doxyfile.in  README.md  README_osx.md  benchmarking.md  (+27 more)
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addrman.h  amount.h  arith_uint256.h  base58.h  bech32.h  blockencodings.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  fs.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  indirectmap.h  init.cpp  init.h  key.cpp  (+67 more)
src/bench/: .gitignore  bench.h  bench_learncoin.cpp  ccoins_caching.cpp  coin_selection.cpp  verify_script.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.h  params.h  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.cpp  sha256.h  sha512.h
src/crypto/ctaes/: README.md
src/index/: base.h  txindex.h
src/interfaces/: README.md  handler.h  node.cpp  node.h  wallet.h
src/policy/: feerate.h  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  callback.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  learncoin.cpp  learncoin.qrc  learncoin_locale.qrc  learncoinaddressvalidator.cpp  learncoinaddressvalidator.h  learncoinamountfield.cpp  learncoinamountfield.h  learncoingui.cpp  learncoingui.h  learncoinstrings.cpp  learncoinunits.cpp  learncoinunits.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  modaloverlay.h  networkstyle.cpp  networkstyle.h  (+54 more)
src/qt/forms/: addressbookpage.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: learncoin_af.ts  learncoin_af_ZA.ts  learncoin_ar.ts  learncoin_be_BY.ts  learncoin_bg.ts  learncoin_bg_BG.ts  learncoin_ca.ts  learncoin_ca@valencia.ts  learncoin_ca_ES.ts  learncoin_cs.ts  learncoin_cy.ts  learncoin_da.ts  learncoin_de.ts  learncoin_el.ts  learncoin_el_GR.ts  learncoin_en.ts  learncoin_en_GB.ts  learncoin_eo.ts  learncoin_es.ts  learncoin_es_AR.ts  learncoin_es_CL.ts  learncoin_es_CO.ts  learncoin_es_DO.ts  learncoin_es_ES.ts  learncoin_es_MX.ts  learncoin_es_UY.ts  learncoin_es_VE.ts  learncoin_et.ts  learncoin_et_EE.ts  learncoin_eu_ES.ts  learncoin_fa.ts  learncoin_fa_IR.ts  learncoin_fi.ts  learncoin_fr.ts  learncoin_fr_CA.ts  learncoin_fr_FR.ts  learncoin_gl.ts  learncoin_he.ts  learncoin_hi_IN.ts  learncoin_hr.ts  (+46 more)
src/qt/res/: learncoin-qt-res.rc
src/qt/test/: Makefile  addressbooktests.cpp  addressbooktests.h  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.h  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.h  wallettests.cpp  wallettests.h
src/rpc/: blockchain.cpp  blockchain.h  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction.h  register.h  server.cpp  server.h  util.h
src/script/: descriptor.h  interpreter.cpp  interpreter.h  ismine.h  learncoinconsensus.cpp  learncoinconsensus.h  script.h  script_error.h  sigcache.h  sign.h  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_learncoin_NativeSecp256k1.c  org_learncoin_NativeSecp256k1.h  org_learncoin_Secp256k1Context.c  org_learncoin_Secp256k1Context.h
src/secp256k1/src/java/org/learncoin/: NativeSecp256k1.java  NativeSecp256k1Test.java  NativeSecp256k1Util.java  Secp256k1Context.java
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bech32_tests.cpp  bip32_tests.cpp  blockchain_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  denialofservice_tests.cpp  descriptor_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_io_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  merkleblock_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  (+30 more)
src/test/data/: README.md  tx_valid.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h  univalue_get.cpp
src/wallet/: coincontrol.h  coinselection.h  crypter.h  db.cpp  db.h  feebumper.h  fees.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  walletdb.h  walletutil.h
src/wallet/test/: coinselector_tests.cpp  psbt_wallet_tests.cpp  wallet_crypto_tests.cpp  wallet_test_fixture.h  wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h  zmqrpc.h
(+251 files in other folders)
